docs: refactor README.md and RAPPORT-A.md